sticky header alignment issue fix

--- a/assets/sass/custom/layout/_header.scss
+++ b/assets/sass/custom/layout/_header.scss
@@ -73,7 +73,7 @@
     .site-header__wrap {
       padding: 0.5rem 0;
       .site-logo {
-        transform: scale(0.8);
+        //transform: scale(0.8);    
       }
     }
   }
